[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/BarlowCondensed-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/scenes/DisclaimerMenu.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 3
outline_color = Color( 1, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="DisclaimerMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="DisclaimerLabel" type="Label" parent="."]
margin_left = 256.0
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 648.0
custom_fonts/font = SubResource( 1 )
text = "TEST"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="DisclaimerTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="DisclaimerTimer" to="." method="_on_Timer_timeout"]
